# protofolio

./: .aiderignore  .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROTOCOLS.md  README.md  SECURITY.md  WORKSPACE_LINTS.md  clippy.toml  deny.toml  package-lock.json  package.json  test-cli.sh
.github/: ai-context.md
.github/workflows/: ci.yml  deploy-docs.yml
docs/: index.md
docs/.vitepress/: config.js
docs/examples/: advanced.md  basic.md  integration.md
docs/guides/: best-practices.md  getting-started.md  messages.md  operations.md  security.md  typescript-generation.md  validation.md
docs/reference/: limitations.md  macro-expansion.md  migration.md  troubleshooting.md
docs/ru/: index.md
docs/ru/examples/: advanced.md  basic.md  integration.md
docs/ru/guides/: best-practices.md  getting-started.md  messages.md  operations.md  security.md  validation.md
docs/ru/reference/: limitations.md  macro-expansion.md  migration.md  troubleshooting.md
protofolio/: Cargo.toml
protofolio-cli/: Cargo.toml  README.md
protofolio-cli/src/: main.rs
protofolio-derive/: Cargo.toml
protofolio-derive/src/: lib.rs  parse_utils.rs
protofolio-derive/src/asyncapi/: attrs.rs  codegen.rs  messages.rs  mod.rs  operations.rs
protofolio-derive/src/asyncapi/attrs/: asyncapi.rs  info.rs  mod.rs  security.rs  server.rs  tag.rs
protofolio-derive/src/message/: attrs.rs  codegen.rs  mod.rs
protofolio-derive/src/operation/: attrs.rs  codegen.rs  mod.rs
protofolio/examples/: axum_integration.rs  basic.rs  full_featured.rs  generate_spec.rs  kafka_example.rs  mqtt_example.rs  nats_example.rs  size_test.rs
protofolio/src/: error.rs  lib.rs  traits.rs  types.rs
protofolio/src/builder/: builder.rs  mod.rs  tests.rs
protofolio/src/internal/: mod.rs
protofolio/src/protocol/: bindings.rs  kafka.rs  mod.rs  mqtt.rs  nats.rs  traits.rs
protofolio/src/schema/: generator.rs  mod.rs
protofolio/src/spec/: channel.rs  components.rs  info.rs  mod.rs  operation.rs  security.rs  traits.rs
protofolio/src/validation/: bindings.rs  mod.rs  validator.rs
protofolio/tests/: error_handling_tests.rs  integration_test.rs  macro_error_tests.rs  protocol_tests.rs  schema_cache_tests.rs
protofolio/tests/common/: mod.rs
protofolio/tests/macro_error_tests/ui/: invalid_action.rs  missing_channel.rs  missing_info_title.rs  missing_info_version.rs  missing_operation_id.rs  missing_operation_messages.rs
scripts/: generate-types.js
