[package]
name = "protofolio-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Rifat Dzhumagulov <jum.rifm@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for protofolio"
repository = "https://github.com/rifmj/protofolio"
homepage = "https://github.com/rifmj/protofolio"
documentation = "https://docs.rs/protofolio-derive"
readme = "../README.md"
keywords = ["asyncapi", "proc-macro", "derive", "code-generation"]
categories = ["development-tools", "proc-macro"]
publish = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error = "1.0"

